--- a/src/Microbus.nuspec
+++ b/src/Microbus.nuspec
@@ -11,7 +11,7 @@ Microbus contributors</authors>
     <licenseUrl>https://raw.github.com/cameronfletcher/Microbus/master/LICENSE.mit.txt</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A very lightweight in-memory message bus for .NET</description>
-    <releaseNotes>TBD</releaseNotes>
+    <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright (c) Microbus contributors.</copyright>
     <tags>micro message bus microbus</tags>
     <frameworkAssemblies>
@@ -19,6 +19,7 @@ Microbus contributors</authors>
       <frameworkAssembly assemblyName="System" targetFramework="net40" />
       <frameworkAssembly assemblyName="System" targetFramework="net45" />
     </frameworkAssemblies>
+    <developmentDependency>true</developmentDependency>
   </metadata>
   <files>
     <file src="Microbus/Microbus.cs" target="content/net35" />
